Imported Upstream version 3.6.2005-01-03

--- a/capifax/config.h.in
+++ b/capifax/config.h.in
@@ -20,3 +20,5 @@
 /* Version number of package */
 #undef VERSION
 
+/* we have SENDING_COMPLETE in ALERT_REQ */
+#undef HAVE_ALERT_SENDING_COMPLETE
