--- a/capifax/configure.in
+++ b/capifax/configure.in
@@ -34,6 +34,8 @@ AC_ARG_WITH(man,
 	AC_DEFINE(CONFIG_MANDIR,"${withval}"),
 )
 
+CS_TEST_ALERT
+
 AC_SUBST(INSTALL)
 AC_SUBST(CONFIG_SBINDIR)
 AC_SUBST(CONFIG_MANDIR)
