--- a/eicon/Makefile.in
+++ b/eicon/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.7 2002/07/19 18:42:01 armin Exp $
+# $Id: Makefile.in,v 1.8 2005/02/21 17:52:03 keil Exp $
 #
 # Makefile for eiconctrl
 # (C) 1997 Fritz Elfert
@@ -18,6 +18,7 @@ DIVALOGPROGRAM		= divalog
 DIVAPROGRAMS		= $(DIVALOADPROGRAM) $(DIVALOGDPROGRAM) $(DIVALOGPROGRAM)
 MANPAGE			= eiconctrl.8
 INSTALL			= @INSTALL@
+CARDSBINDIR		= @CONFIG_CARD_SBINDIR@
 SBINDIR			= @CONFIG_SBINDIR@
 DATA_DIR		= @CONFIG_DATADIR@
 MANDIR			= @CONFIG_MANDIR@
@@ -98,25 +99,25 @@ install-man: $(PROGRAM).man
 	$(INSTALL_MAN) $< $(DESTDIR)$(MAN8DIR)/$(MANPAGE)
 
 install: all install-man install-data
-	$(INSTALL_PROGRAM) $(PROGRAM) $(DESTDIR)$(SBINDIR)/$(PROGRAM)
+	$(INSTALL_PROGRAM) $(PROGRAM) $(DESTDIR)$(CARDSBINDIR)/$(PROGRAM)
 ifeq ("@HAVE_NATIVE@","n")
-	$(INSTALL_PROGRAM) $(DIVALOADPROGRAM) $(DESTDIR)$(SBINDIR)/$(DIVALOADPROGRAM)
+	$(INSTALL_PROGRAM) $(DIVALOADPROGRAM) $(DESTDIR)$(CARDSBINDIR)/$(DIVALOADPROGRAM)
 	$(INSTALL_PROGRAM) $(DIVALOGDPROGRAM) $(DESTDIR)$(SBINDIR)/$(DIVALOGDPROGRAM)
 	$(INSTALL_PROGRAM) $(DIVALOGPROGRAM) $(DESTDIR)$(SBINDIR)/$(DIVALOGPROGRAM)
 endif
 
 install-strip: all
-	$(INSTALL_PROGRAM) -s $(PROGRAM) $(DESTDIR)$(SBINDIR)/$(PROGRAM)
+	$(INSTALL_PROGRAM) -s $(PROGRAM) $(DESTDIR)$(CARDSBINDIR)/$(PROGRAM)
 ifeq ("@HAVE_NATIVE@","n")
-	$(INSTALL_PROGRAM) -s $(DIVALOADPROGRAM) $(DESTDIR)$(SBINDIR)/$(DIVALOADPROGRAM)
+	$(INSTALL_PROGRAM) -s $(DIVALOADPROGRAM) $(DESTDIR)$(CARDSBINDIR)/$(DIVALOADPROGRAM)
 	$(INSTALL_PROGRAM) -s $(DIVALOGDPROGRAM) $(DESTDIR)$(SBINDIR)/$(DIVALOGDPROGRAM)
 	$(INSTALL_PROGRAM) -s $(DIVALOGPROGRAM) $(DESTDIR)$(SBINDIR)/$(DIVALOGPROGRAM)
 endif
 
 uninstall:
-	rm -f $(DESTDIR)$(SBINDIR)/$(PROGRAM) $(DESTDIR)$(MAN8DIR)/$(MANPAGE)
+	rm -f $(DESTDIR)$(CARDSBINDIR)/$(PROGRAM) $(DESTDIR)$(MAN8DIR)/$(MANPAGE)
 ifeq ("@HAVE_NATIVE@","n")
-	rm -f $(DESTDIR)$(SBINDIR)/$(DIVALOADPROGRAM)
+	rm -f $(DESTDIR)$(CARDSBINDIR)/$(DIVALOADPROGRAM)
 	rm -f $(DESTDIR)$(SBINDIR)/$(DIVALOGDPROGRAM)
 	rm -f $(DESTDIR)$(SBINDIR)/$(DIVALOGPROGRAM)
 endif
