--- a/eicon/configure.in
+++ b/eicon/configure.in
@@ -3,8 +3,9 @@ AC_INIT(eiconctrl.c)
 AC_PREFIX_DEFAULT("/usr")
 
 I4LVERSION=${I4LVERSION:-"?.?"}
-CONFIG_DATADIR=${CONFIG_DATADIR:-"/usr/lib/isdn/eicon"}
-CONFIG_SBINDIR=${CONFIG_SBINDIR:-"/sbin"}
+CONFIG_DATADIR=${CONFIG_FIRMWAREDIR:-"/usr/lib/isdn/eicon"}
+CONFIG_SBINDIR=${CONFIG_SBINDIR:-"/usr/sbin"}
+CONFIG_CARD_SBINDIR=${CONFIG_CARD_SBINDIR:-"/sbin"}
 CONFIG_MANDIR=${CONFIG_MANDIR:-"/usr/man"}
 CONFIG_EICONCTRL_DEBUG=${CONFIG_EICONCTRL_DEBUG:-"n"}
 MANDATE=`grep CHECKIN eiconctrl.man.in | awk '{print $4}'`
@@ -75,6 +76,7 @@ AC_SUBST(CONFIG_EICONCTRL_DEBUG)
 AC_SUBST(CONFIG_DATADIR)
 AC_SUBST(CONFIG_KERNELDIR)
 AC_SUBST(CONFIG_SBINDIR)
+AC_SUBST(CONFIG_CARD_SBINDIR)
 AC_SUBST(CONFIG_MANDIR)
 AC_SUBST(I4LVERSION)
 AC_CONFIG_HEADER(config.h)
