--- a/hisax/configure.in
+++ b/hisax/configure.in
@@ -4,8 +4,8 @@ AC_PREFIX_DEFAULT(/usr)
 
 I4LCONFDIR=${I4LCONFDIR:-"/etc/isdn"}
 I4LVERSION=${I4LVERSION:-"?.?"}
-CONFIG_SBINDIR=${CONFIG_SBINDIR:-"/sbin"}
-CONFIG_DATADIR=${CONFIG_DATADIR:-"/usr/lib/isdn"}
+CONFIG_SBINDIR=${CONFIG_CARD_SBINDIR:-"/sbin"}
+CONFIG_DATADIR=${CONFIG_FIRMWAREDIR:-"/usr/lib/isdn"}
 CONFIG_MANDIR=${CONFIG_MANDIR:-"/usr/man"}
 CONFIG_TELESCTRL=${CONFIG_TELESCTRL:-"n"}
 CONFIG_HISAXCTRL=${CONFIG_HISAXCTRL:-"n"}
