--- a/avmb1/configure.in
+++ b/avmb1/configure.in
@@ -8,9 +8,9 @@ AC_PROG_INSTALL
 
 I4LCONFDIR=${I4LCONFDIR:-"/etc/isdn"}
 I4LVERSION=${I4LVERSION:-"?.?"}
-CONFIG_DATADIR=${CONFIG_DATADIR:-"/usr/lib/isdn"}
+CONFIG_DATADIR=${CONFIG_FIRMWAREDIR:-"/usr/lib/isdn"}
 CONFIG_MANDIR=`eval echo ${CONFIG_MANDIR:-"/usr/man"}`
-CONFIG_SBINDIR=`eval echo ${CONFIG_SBINDIR:-"/sbin"}`
+CONFIG_SBINDIR=`eval echo ${CONFIG_CARD_SBINDIR:-"/sbin"}`
 MANDATE=`grep CHECKIN avmcapictrl.man.in | awk '{print $4}'`
 
 dnl Checks for libraries.
