--- a/capiinit/configure.in
+++ b/capiinit/configure.in
@@ -1,7 +1,10 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(capiinit.c)
 AM_INIT_AUTOMAKE(capiinit, 1.0)
-AC_PREFIX_DEFAULT(/usr)
+AC_PREFIX_DEFAULT(/)
+
+CONFIG_SBINDIR$=${CONFIG_CARD_SBINDIR:-"/sbin"}
+
 
 dnl Checks for programs.
 AC_PROG_INSTALL
@@ -20,5 +23,6 @@ dnl Checks for typedefs, structures, and compiler characteristics.
 AC_SUBST(INSTALL)
 AC_SUBST(CONFIG_SBINDIR)
 AC_SUBST(CONFIG_MANDIR)
+AC_SUBST(CONFIG_FIRMWAREDIR)
 AM_CONFIG_HEADER(config.h)
 AC_OUTPUT(Makefile)
