--- a/icn/configure.in
+++ b/icn/configure.in
@@ -3,8 +3,8 @@ AC_INIT(icnctrl.c)
 AC_PREFIX_DEFAULT("/usr")
 
 I4LVERSION=${I4LVERSION:-"?.?"}
-CONFIG_DATADIR=${CONFIG_DATADIR:-"/usr/lib/isdn"}
-CONFIG_SBINDIR=${CONFIG_SBINDIR:-"/sbin"}
+CONFIG_DATADIR=${CONFIG_FIRMWAREDIR:-"/usr/lib/isdn"}
+CONFIG_SBINDIR=${CONFIG_CARD_SBINDIR:-"/sbin"}
 CONFIG_MANDIR=${CONFIG_MANDIR:-"/usr/man"}
 CONFIG_ICNCTRL_DEBUG=${CONFIG_ICNCTRL_DEBUG:-"n"}
 MANDATE=`grep CHECKIN icnctrl.man.in | awk '{print $4}'`
