--- a/isdnctrl/configure.in
+++ b/isdnctrl/configure.in
@@ -5,7 +5,7 @@ AC_PREFIX_DEFAULT(/usr)
 I4LCONFDIR=`eval echo ${CONFIG_I4LCONFDIR:-"/etc/isdn"}`
 I4LCONFFILE=`eval echo ${CONFIG_CONFFILE:-"/etc/isdn"}`
 I4LVERSION=${I4LVERSION:-"?.?"}
-CONFIG_SBINDIR=${CONFIG_SBINDIR:-"/sbin"}
+CONFIG_SBINDIR=${CONFIG_CARD_SBINDIR:-"/sbin"}
 CONFIG_MANDIR=${CONFIG_MANDIR:-"/usr/man"}
 CONFIG_ISDNCTRL_CONF=${CONFIG_ISDNCTRL_CONF:-"n"}
 CONFIG_ISDNCTRL_DWABC_UDP_INFO=${CONFIG_ISDNCTRL_DWABC_UDP_INFO:-"n"}
