--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Build-Depends: debhelper (>=5), bzip2, libncurses5-dev | libncurses-dev, xutils-
 Package: isdnutils
 Priority: optional
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 s390 sh4 sparc sparc64
-Depends: isdnutils-base (= ${binary:Version}), isdnlog, isdnutils-xtools, isdnvboxserver, isdnvboxclient, openbsd-inetd | inet-superserver, ${misc:Depends}
+Depends: isdnutils-base (= ${binary:Version}), ipppd, isdnlog, isdnutils-xtools, isdnvboxserver, isdnvboxclient, openbsd-inetd | inet-superserver, ${misc:Depends}
 Suggests: isdnutils-doc, pppdcapiplugin, capiutils
 Description: ISDN utilities - dependency package
  This package depends on the most frequently used components for an
@@ -23,6 +23,7 @@ Description: ISDN utilities - dependency package
  .
  The component packages involved are:
   * isdnutils-base:   the basic set of ISDN utilities;
+  * ipppd:            for networking over ISDN with syncPPP;
   * isdnlog:          for logging ISDN calls (and much more);
   * isdnutils-xtools: graphical utilities (xisdnload and xmonisdn);
   * isdnvboxclient:   ISDN answering machine client;
@@ -38,7 +39,7 @@ Priority: optional
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
 Pre-Depends: debconf (>= 1.2.9) | debconf-2.0
 Depends: udev | makedev (>= 2.3.1-77), ${shlibs:Depends}, lsb-base (>= 1.3-9ubuntu3), ${misc:Depends}
-Suggests: isdnlog, isdnutils-doc, isdnutils-xtools, isdnvboxserver, isdnvboxclient
+Suggests: ipppd, isdnlog, isdnutils-doc, isdnutils-xtools, isdnvboxserver, isdnvboxclient
 Description: ISDN utilities - minimal set
  This package provides the basic set of ISDN utilities needed to make use
  of an ISDN card. For more complete functionality, install the isdnutils
@@ -57,16 +58,16 @@ Description: ISDN utilities - graphical tools
  They have been split out into a separate package to allow the others
  in the suite to avoid dependencies on the X Window System.
 
-# Package: ipppd
-# Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
-# Section: net
-# Depends: isdnutils-base (= ${binary:Version}), debconf (>=1.2.9) | debconf-2.0, ppp, ${shlibs:Depends}, udev | makedev, ${misc:Depends}
-# Suggests: pdnsd
-# Description: ISDN utilities - PPP daemon
-#  This package provides the specially modified version of the Point to
-#  Point Protocol daemon needed to connect to the Internet through an
-#  internal ISDN card. It also supports dial-in connections from Windows
-#  clients.
+Package: ipppd
+Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
+Section: net
+Depends: isdnutils-base (= ${binary:Version}), debconf (>=1.2.9) | debconf-2.0, ppp, ${shlibs:Depends}, udev | makedev, ${misc:Depends}
+Suggests: pdnsd
+Description: ISDN utilities - PPP daemon
+ This package provides the specially modified version of the Point to
+ Point Protocol daemon needed to connect to the Internet through an
+ internal ISDN card. It also supports dial-in connections from Windows
+ clients.
 
 Package: isdnlog
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
