*.config: turn abort on error off until further analysis

--- a/debian/isdnvboxserver.config
+++ b/debian/isdnvboxserver.config
@@ -1,5 +1,10 @@
 #!/bin/sh
-set -e
+
+# FIXME: abort on error should be turned on but breaks upgrades
+# http://bugs.debian.org/601768 and http://bugs.debian.org/554537
+# needs further analysis
+#
+# set -e
 
 # Vars involved, and how they're used:
 #
