--- a/debian/control
+++ b/debian/control
@@ -47,7 +47,7 @@ Package: isdnutils-base
 Priority: optional
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
 Pre-Depends: debconf (>= 1.2.9) | debconf-2.0
-Depends: udev | makedev (>= 2.3.1-77), ${shlibs:Depends}, lsb-base (>= 1.3-9ubuntu3), ${misc:Depends}
+Depends: ${shlibs:Depends}, lsb-base (>= 1.3-9ubuntu3), ${misc:Depends}
 Suggests: ipppd, isdnlog, isdnutils-doc, isdnutils-xtools, isdnvboxserver, isdnvboxclient
 Description: ISDN utilities - minimal set
  This package provides the basic set of ISDN utilities needed to make use
@@ -70,7 +70,7 @@ Description: ISDN utilities - graphical tools
 Package: ipppd
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
 Section: net
-Depends: isdnutils-base (= ${binary:Version}), debconf (>=1.2.9) | debconf-2.0, ppp, ${shlibs:Depends}, udev | makedev, ${misc:Depends}
+Depends: isdnutils-base (= ${binary:Version}), debconf (>=1.2.9) | debconf-2.0, ppp, ${shlibs:Depends}, ${misc:Depends}
 Suggests: pdnsd
 Description: ISDN utilities - PPP daemon
  This package provides the specially modified version of the Point to
@@ -132,7 +132,7 @@ Description: ISDN utilities - answering machine client
 Package: isdnvboxserver
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
 Depends: isdnutils-base (= ${binary:Version}), debconf (>=1.2.9) | debconf-2.0,
- ${shlibs:Depends}, openbsd-inetd | inet-superserver, udev | makedev, ${misc:Depends}
+ ${shlibs:Depends}, openbsd-inetd | inet-superserver, ${misc:Depends}
 Suggests: isdnvboxclient
 Description: ISDN utilities - answering machine server
  Let your Debian system be your answering machine! Messages can be accessed
@@ -145,8 +145,8 @@ Description: ISDN utilities - answering machine server
 
 Package: capiutils
 Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
-Depends: libcapi20-3 (= ${binary:Version}), ${shlibs:Depends}, lsb-base (>= 1.3-9ubuntu3),
- udev | makedev, ${misc:Depends}
+Depends: libcapi20-3 (= ${binary:Version}), ${shlibs:Depends},
+ lsb-base (>= 1.3-9ubuntu3), ${misc:Depends}
 Section: net
 Description: ISDN utilities - tools for CAPI-capable cards
  Some ISDN cards (notably the AVM active cards, and the AVM passive cards
