--- a/debian/control
+++ b/debian/control
@@ -15,7 +15,7 @@ Vcs-Browser: http://git.debian.org/?p=collab-maint/isdnutils.git
 
 Package: isdnutils
 Priority: optional
-Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 s390 sh4 sparc sparc64
+Architecture: alpha amd64 arm armeb armel armhf hppa i386 ia64 m68k mips mipsel powerpc ppc64 s390 sh4 sparc sparc64
 Depends: isdnutils-base (= ${binary:Version}), ipppd, isdnlog, isdnutils-xtools,
  isdnvboxserver, isdnvboxclient, openbsd-inetd | inet-superserver, ${misc:Depends}
 Suggests: isdnutils-doc, pppdcapiplugin, capiutils
@@ -45,7 +45,7 @@ Description: ISDN utilities - dependency package
 
 Package: isdnutils-base
 Priority: optional
-Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
+Architecture: alpha amd64 arm armeb armel armhf hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
 Pre-Depends: debconf (>= 1.2.9) | debconf-2.0
 Depends: ${shlibs:Depends}, lsb-base (>= 1.3-9ubuntu3), ${misc:Depends}
 Suggests: ipppd, isdnlog, isdnutils-doc, isdnutils-xtools, isdnvboxserver, isdnvboxclient
@@ -55,7 +55,7 @@ Description: ISDN utilities - minimal set
  dependency package.
 
 Package: isdnutils-xtools
-Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
+Architecture: alpha amd64 arm armeb armel armhf hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
 Section: x11
 Depends: isdnutils-base (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Description: ISDN utilities - graphical tools
@@ -68,7 +68,7 @@ Description: ISDN utilities - graphical tools
  in the suite to avoid dependencies on the X Window System.
 
 Package: ipppd
-Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
+Architecture: alpha amd64 arm armeb armel armhf hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
 Section: net
 Depends: isdnutils-base (= ${binary:Version}), debconf (>=1.2.9) | debconf-2.0, ppp, ${shlibs:Depends}, ${misc:Depends}
 Suggests: pdnsd
@@ -79,7 +79,7 @@ Description: ISDN utilities - PPP daemon
  clients.
 
 Package: isdnlog
-Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
+Architecture: alpha amd64 arm armeb armel armhf hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
 Depends: isdnutils-base (= ${binary:Version}), isdnlog-data (>= ${binary:Version}),
  debconf (>=1.2.9) | debconf-2.0, ${shlibs:Depends}, ${misc:Depends}
 Description: ISDN utilities - connection logger
@@ -107,7 +107,7 @@ Description: ISDN utilities - documentation
  for the ISDN utilities suite, in English and German.
 
 Package: isdnvbox
-Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
+Architecture: alpha amd64 arm armeb armel armhf hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
 Depends: isdnvboxclient, isdnvboxserver, ${misc:Depends}
 Recommends: sox
 Description: ISDN utilities - answering machine dependency package
@@ -118,7 +118,7 @@ Description: ISDN utilities - answering machine dependency package
  the messages are recorded) and the client (with which you listen to them).
 
 Package: isdnvboxclient
-Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
+Architecture: alpha amd64 arm armeb armel armhf hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
 Depends: ${shlibs:Depends}, sox | nas-bin | alsa-utils, ${misc:Depends}
 Suggests: isdnvboxserver
 Description: ISDN utilities - answering machine client
@@ -130,7 +130,7 @@ Description: ISDN utilities - answering machine client
  accessible over the network).
 
 Package: isdnvboxserver
-Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
+Architecture: alpha amd64 arm armeb armel armhf hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
 Depends: isdnutils-base (= ${binary:Version}), debconf (>=1.2.9) | debconf-2.0,
  ${shlibs:Depends}, openbsd-inetd | inet-superserver, ${misc:Depends}
 Suggests: isdnvboxclient
@@ -144,7 +144,7 @@ Description: ISDN utilities - answering machine server
  the same system.
 
 Package: capiutils
-Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
+Architecture: alpha amd64 arm armeb armhf armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
 Depends: libcapi20-3 (= ${binary:Version}), ${shlibs:Depends},
  lsb-base (>= 1.3-9ubuntu3), ${misc:Depends}
 Section: net
@@ -155,7 +155,7 @@ Description: ISDN utilities - tools for CAPI-capable cards
  these cards.
 
 Package: libcapi20-3
-Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
+Architecture: alpha amd64 arm armeb armel armhf hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
 Section: libs
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: ISDN utilities - CAPI support libraries
@@ -167,7 +167,7 @@ Description: ISDN utilities - CAPI support libraries
  This package will be installed automatically if needed.
 
 Package: libcapi20-dev
-Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
+Architecture: alpha amd64 arm armeb armel armhf hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
 Section: libdevel
 Depends: libcapi20-3 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Description: ISDN utilities - CAPI development libraries
@@ -179,7 +179,7 @@ Description: ISDN utilities - CAPI development libraries
  This package provides files needed for development of CAPI-aware software.
 
 Package: pppdcapiplugin
-Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
+Architecture: alpha amd64 arm armeb armel armhf hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
 Depends: ppp (>= 2.4.4), ppp (<< 2.4.6), libcapi20-3 (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Section: net
@@ -191,14 +191,14 @@ Description: ISDN utilities - pppd plug-in for CAPI support
  on such cards.
 
 # Package: isdnactivecards
-# Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
+# Architecture: alpha amd64 arm armeb armel armhf hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
 # Depends: isdnutils-base (= ${binary:Version}), capiutils (>= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 # Description: ISDN utilities - active ISDN card support
 #  This package provides firmware and firmware-loading utilities for active
 #  ISDN cards (the Eicon, Eicon Diva, IBM Active 2000, ICN, or PCBIT-D cards).
 
 # Package: isdneurofile
-# Architecture: alpha amd64 arm armeb armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
+# Architecture: alpha amd64 arm armeb armel armhf hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
 # Section: comm
 # Depends: isdnutils-base (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 # Description: ISDN utilities - EUROFILE support
