--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,7 @@ Vcs-Browser: http://git.debian.org/?p=collab-maint/isdnutils.git
 
 Package: isdnutils
 Priority: optional
-Architecture: alpha amd64 arm armeb armel armhf hppa i386 ia64 m68k mips mipsel powerpc ppc64 s390 sh4 sparc sparc64
+Architecture: linux-any
 Depends: isdnutils-base (= ${binary:Version}), ipppd, isdnlog, isdnutils-xtools,
  isdnvboxserver, isdnvboxclient, openbsd-inetd | inet-superserver, ${misc:Depends}
 Suggests: isdnutils-doc, pppdcapiplugin, capiutils
@@ -46,7 +46,7 @@ Description: ISDN utilities - dependency package
 
 Package: isdnutils-base
 Priority: optional
-Architecture: alpha amd64 arm armeb armel armhf hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
+Architecture: linux-any
 Pre-Depends: debconf (>= 1.2.9) | debconf-2.0
 Depends: ${shlibs:Depends}, lsb-base (>= 1.3-9ubuntu3), ${misc:Depends}
 Suggests: ipppd, isdnlog, isdnutils-doc, isdnutils-xtools, isdnvboxserver, isdnvboxclient
@@ -56,7 +56,7 @@ Description: ISDN utilities - minimal set
  dependency package.
 
 Package: isdnutils-xtools
-Architecture: alpha amd64 arm armeb armel armhf hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
+Architecture: linux-any
 Section: x11
 Depends: isdnutils-base (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Description: ISDN utilities - graphical tools
@@ -69,7 +69,7 @@ Description: ISDN utilities - graphical tools
  in the suite to avoid dependencies on the X Window System.
 
 Package: ipppd
-Architecture: alpha amd64 arm armeb armel armhf hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
+Architecture: linux-any
 Section: net
 Depends: isdnutils-base (= ${binary:Version}), debconf (>=1.2.9) | debconf-2.0, ppp, ${shlibs:Depends}, ${misc:Depends}
 Suggests: pdnsd
@@ -80,7 +80,7 @@ Description: ISDN utilities - PPP daemon
  clients.
 
 Package: isdnlog
-Architecture: alpha amd64 arm armeb armel armhf hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
+Architecture: linux-any
 Depends: isdnutils-base (= ${binary:Version}), isdnlog-data (>= ${binary:Version}),
  debconf (>=1.2.9) | debconf-2.0, ${shlibs:Depends}, ${misc:Depends}
 Description: ISDN utilities - connection logger
@@ -108,7 +108,7 @@ Description: ISDN utilities - documentation
  for the ISDN utilities suite, in English and German.
 
 Package: isdnvbox
-Architecture: alpha amd64 arm armeb armel armhf hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
+Architecture: linux-any
 Depends: isdnvboxclient, isdnvboxserver, ${misc:Depends}
 Recommends: sox
 Description: ISDN utilities - answering machine dependency package
@@ -119,7 +119,7 @@ Description: ISDN utilities - answering machine dependency package
  the messages are recorded) and the client (with which you listen to them).
 
 Package: isdnvboxclient
-Architecture: alpha amd64 arm armeb armel armhf hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
+Architecture: linux-any
 Depends: ${shlibs:Depends}, sox | nas-bin | alsa-utils, ${misc:Depends}
 Suggests: isdnvboxserver
 Description: ISDN utilities - answering machine client
@@ -131,7 +131,7 @@ Description: ISDN utilities - answering machine client
  accessible over the network).
 
 Package: isdnvboxserver
-Architecture: alpha amd64 arm armeb armel armhf hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
+Architecture: linux-any
 Depends: isdnutils-base (= ${binary:Version}), debconf (>=1.2.9) | debconf-2.0,
  ${shlibs:Depends}, openbsd-inetd | inet-superserver, ${misc:Depends}
 Suggests: isdnvboxclient
@@ -145,7 +145,7 @@ Description: ISDN utilities - answering machine server
  the same system.
 
 Package: capiutils
-Architecture: alpha amd64 arm armeb armhf armel hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
+Architecture: linux-any
 Depends: libcapi20-3 (= ${binary:Version}), ${shlibs:Depends},
  lsb-base (>= 1.3-9ubuntu3), ${misc:Depends}
 Section: net
@@ -156,7 +156,7 @@ Description: ISDN utilities - tools for CAPI-capable cards
  these cards.
 
 Package: libcapi20-3
-Architecture: alpha amd64 arm armeb armel armhf hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
+Architecture: linux-any
 Section: libs
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: ISDN utilities - CAPI support libraries
@@ -168,7 +168,7 @@ Description: ISDN utilities - CAPI support libraries
  This package will be installed automatically if needed.
 
 Package: libcapi20-dev
-Architecture: alpha amd64 arm armeb armel armhf hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
+Architecture: linux-any
 Section: libdevel
 Depends: libcapi20-3 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
 Description: ISDN utilities - CAPI development libraries
@@ -180,7 +180,7 @@ Description: ISDN utilities - CAPI development libraries
  This package provides files needed for development of CAPI-aware software.
 
 Package: pppdcapiplugin
-Architecture: alpha amd64 arm armeb armel armhf hppa i386 ia64 m68k mips mipsel powerpc ppc64 sparc s390 sh4 sparc64
+Architecture: linux-any
 Depends: ppp (>= 2.4.4), ppp (<< 2.4.6), libcapi20-3 (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Section: net
